test/corpus/functions.txt
================================================================================
Simple function with no parameters
================================================================================

std empty(): void {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (function_color)
    name: (identifier)
    (parameter_list)
    return_type: (primitive_type)
    (block)))

================================================================================
Function with parameters
================================================================================

std add(i64 a, i64 b): i64 {
    return addi64(a, b)
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (function_color)
    name: (identifier)
    (parameter_list
      (parameter
        (primitive_type)
        name: (identifier))
      (parameter
        (primitive_type)
        name: (identifier)))
    return_type: (primitive_type)
    (block
      (return_statement
        (call_expression
          function: (identifier)
          (argument_list
            (identifier)
            (identifier)))))))

================================================================================
Function with compat color
================================================================================

compat main(): void {
    println("Hello")
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (function_color)
    name: (identifier)
    (parameter_list)
    return_type: (primitive_type)
    (block
      (expression_statement
        (call_expression
          function: (identifier)
          (argument_list
            (string_literal)))))))

================================================================================
Function with plat color
================================================================================

plat native_call(): i32 {
    return 0
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (function_color)
    name: (identifier)
    (parameter_list)
    return_type: (primitive_type)
    (block
      (return_statement
        (integer_literal)))))

================================================================================
Method definition
================================================================================

std (m App app) run(): void {
}

--------------------------------------------------------------------------------

(source_file
  (method_definition
    (function_color)
    (receiver
      (named_type
        (type_name))
      (identifier))
    name: (identifier)
    (parameter_list)
    return_type: (primitive_type)
    (block)))
