test/corpus/imports.txt
================================================================================
Simple symbol import
================================================================================

use { println } from compat.io

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (use_symbol_list
      (identifier))
    (module_path
      (identifier)
      (identifier))))

================================================================================
Multiple symbol imports
================================================================================

use { print, println, format } from compat.io

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (use_symbol_list
      (identifier)
      (identifier)
      (identifier))
    (module_path
      (identifier)
      (identifier))))

================================================================================
Module import
================================================================================

use mathlib

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (module_path
      (identifier))))

================================================================================
Nested module path
================================================================================

use { helper } from utils.strings.format

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (use_symbol_list
      (identifier))
    (module_path
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Import with trailing comma
================================================================================

use { abs, max, min, } from mathlib

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (use_symbol_list
      (identifier)
      (identifier)
      (identifier))
    (module_path
      (identifier))))
